--- a/src/app/views/lessen/lessen.component.html
+++ b/src/app/views/lessen/lessen.component.html
@@ -1,8 +1,7 @@
-<div class="sidebar" data-color="purple" data-background-color="white" data-image="../assets/img/sidebar-1.jpg">
-
-  <div class="logo"><a href="http://www.creative-tim.com" class="simple-text logo-normal">
-    Lessons
-  </a></div>
+<div class="sidebar" data-color="purple" data-background-color="white">
+  <div class="logo">
+    <div class="simple-text logo-normal">Lessons</div>
+  </div>
   <div class="sidebar-wrapper">
     <ul class="nav">
       <li class="nav-item" *ngFor="let les of lessen">
