Refactor to english names Add filter in service for displaying tasks of the selected subject (console only..)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <div class="wrapper ">
-  <app-lessen></app-lessen>
+  <app-subjects></app-subjects>
   <div class="main-panel">
     <div class="content">
       <div class="container-fluid">
         <div class="row">
           <div class="col-12">
-            <app-hoofdstukken></app-hoofdstukken>
+            <app-chapters></app-chapters>
           </div>
         </div>
       </div>
