refactor subject model and component name to avoid ambiguous name of Subject in rxjs

--- a/src/app/views/themes/themes.component.html
+++ b/src/app/views/themes/themes.component.html
@@ -4,9 +4,9 @@
   </div>
   <div class="sidebar-wrapper">
     <ul class="nav">
-      <li class="nav-item" *ngFor="let subj of subjects" (click)="showChaptersBySubject(subj)">
+      <li class="nav-item" *ngFor="let theme of themes" (click)="getChaptersByTheme(theme)">
         <a class="nav-link">
-          <p>{{subj.title}}</p>
+          <p>{{theme.title}}</p>
         </a>
       </li>
     </ul>
