--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,8 @@
         <div class="row">
           <div class="col-12">
             <app-chapters [chapters]="chapters"
-                            (updateChapter)="onUpdateChapter($event)"></app-chapters>
+                            (updateChapter)="onUpdateChapter($event)"
+                              (deleteChapter)="onDeleteChapter($event)"></app-chapters>
           </div>
         </div>
       </div>
