--- a/src/app/dialog/edit-chapter/edit-chapter.component.html
+++ b/src/app/dialog/edit-chapter/edit-chapter.component.html
@@ -20,7 +20,7 @@
   <mat-label>Select subject</mat-label>
 
   <mat-select [(ngModel)]="tmpTheme">
-    <mat-option [value]="null">no subject</mat-option>
+    <mat-option [value]="null">Geen vak</mat-option>
     <mat-option *ngFor="let theme of themes" [value]="theme">
       {{theme.title}}
     </mat-option>
@@ -32,7 +32,7 @@
   <mat-label>Select subject</mat-label>
 
   <mat-select [(ngModel)]="tmpPriority">
-    <mat-option [value]="null">no prio</mat-option>
+    <mat-option [value]="null">Geen prioriteit</mat-option>
     <mat-option *ngFor="let prio of priorities" [value]="prio">
       {{prio.title}}
     </mat-option>
@@ -49,6 +49,9 @@
     Save
   </button>
   <button (click)="onCancel()" mat-raised-button>Cancel</button>
+  <button mat-button *ngIf="!chapter._isFinished" (click)="complete()">Finish chapter</button>
+  <button mat-button *ngIf="chapter._isFinished" (click)="activate()">Start chapter</button>
+  <button mat-button class="red" (click) = "delete()">Delete chapter</button>
 </mat-dialog-actions>
 
 
