--- a/src/app/dialog/edit-chapter/edit-chapter.component.html
+++ b/src/app/dialog/edit-chapter/edit-chapter.component.html
@@ -41,6 +41,23 @@
 </mat-form-field>
 
 
+<mat-form-field>
+
+  <input matInput placeholder="Geef de datum op" #inputDate
+          readonly="true"
+            [matDatepicker]="picker"
+              [(ngModel)]="tmpDate"
+                (click)="picker.open()">
+  <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+  <mat-datepicker #picker></mat-datepicker>
+  <button *ngIf="inputDate.value.trim().length > 0"
+            mat-button matSuffix mat-icon-button aria-label="Clear"
+              (click)="tmpDate = null">
+      <mat-icon>clear</mat-icon>
+  </button>
+</mat-form-field>
+
+
 <mat-dialog-actions>
   <button
     (click)="onConfirm()" [disabled]="inputTitle.value.trim().length==0"
