--- a/src/app/dialog/edit-theme-dialog/edit-theme-dialog.component.html
+++ b/src/app/dialog/edit-theme-dialog/edit-theme-dialog.component.html
@@ -1,1 +1,41 @@
-<p>edit-theme-dialog works!</p>
+<mat-dialog-content>
+  <p mat-dialog-title>{{dialogTitle}}</p>
+
+  <mat-form-field>
+    <mat-label>Naam van vak</mat-label>
+    <input
+      #inputTitle
+      matInput
+      (keydown.enter)="onConfirm()"
+      [(ngModel)]="themeTitle" />
+    <button
+      *ngIf="themeTitle.trim().length > 0" class="dialog-chapter-title"
+      class="clear-icon"
+      mat-button mat-icon-button matSuffix aria-label="Clear"
+      (click)="themeTitle=''">
+      <mat-icon>clear</mat-icon>
+    </button>
+  </mat-form-field>
+</mat-dialog-content>
+
+
+<mat-dialog-actions>
+
+  <div class="col-12 text-center">
+    <button mat-raised-button color="primary"
+              (click)="onConfirm()"
+                [disabled]="inputTitle.value.trim().length == 0">
+      Opslaan
+    </button>
+    <button mat-raised-button (click)="onCancel()">Cancel</button>
+  </div>
+
+  <div class="col-12 text-center">
+    <button mat-button class="red"
+            (click)="delete()"
+             >
+      Delete
+    </button>
+  </div>
+
+</mat-dialog-actions>
