Refresh page on edit theme fix Date could be null fix Default selected theme and prio in edit dialog fix

--- a/src/app/dialog/edit-chapter/edit-chapter.component.html
+++ b/src/app/dialog/edit-chapter/edit-chapter.component.html
@@ -20,6 +20,7 @@
   <mat-label>Select subject</mat-label>
 
   <mat-select [(ngModel)]="tmpTheme">
+    <mat-option [value]="tmpTheme">{{tmpTheme.title}}</mat-option>
     <mat-option [value]="null">Geen vak</mat-option>
     <mat-option *ngFor="let theme of themes" [value]="theme">
       {{theme.title}}
@@ -32,6 +33,7 @@
   <mat-label>Select subject</mat-label>
 
   <mat-select [(ngModel)]="tmpPriority">
+    <mat-option [value]="tmpPriority">{{tmpPriority.title}}</mat-option>
     <mat-option [value]="null">Geen prioriteit</mat-option>
     <mat-option *ngFor="let prio of priorities" [value]="prio">
       {{prio.title}}
