add functionality add chapter

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,8 @@
             <app-chapters [chapters]="chapters"
                             (updateChapter)="onUpdateChapter($event)"
                               (deleteChapter)="onDeleteChapter($event)"
-                                (selectTheme)="onSelectTheme($event)"></app-chapters>
+                                (selectTheme)="onSelectTheme($event)"
+                                  (addChapter)="onAddChapter($event)"></app-chapters>
           </div>
         </div>
       </div>
