--- a/src/app/dialog/edit-chapter/edit-chapter.component.html
+++ b/src/app/dialog/edit-chapter/edit-chapter.component.html
@@ -18,9 +18,7 @@
 
 <mat-form-field>
   <mat-label>Select subject</mat-label>
-
   <mat-select [(ngModel)]="tmpTheme">
-    <mat-option [value]="tmpTheme">{{tmpTheme.title}}</mat-option>
     <mat-option [value]="null">Geen vak</mat-option>
     <mat-option *ngFor="let theme of themes" [value]="theme">
       {{theme.title}}
@@ -30,10 +28,8 @@
 </mat-form-field>
 
 <mat-form-field>
-  <mat-label>Select subject</mat-label>
-
+  <mat-label>Select prioriteit</mat-label>
   <mat-select [(ngModel)]="tmpPriority">
-    <mat-option [value]="tmpPriority">{{tmpPriority.title}}</mat-option>
     <mat-option [value]="null">Geen prioriteit</mat-option>
     <mat-option *ngFor="let prio of priorities" [value]="prio">
       {{prio.title}}
