--- a/src/app/views/themes/themes.component.html
+++ b/src/app/views/themes/themes.component.html
@@ -1,6 +1,14 @@
 <div class="sidebar" data-color="purple" data-background-color="white">
   <div class="logo">
-    <div class="simple-text logo-normal">Lessons</div>
+    <mat-toolbar>
+      <span>Lessons</span>
+      <span>
+        <button mat-icon-button>
+          <mat-icon>add</mat-icon>
+        </button>
+    </span>
+    </mat-toolbar>
+
   </div>
   <div class="sidebar-wrapper">
     <ul class="nav">
