Functionality add theme

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,8 @@
                     [themes]="themes"
                       [selectedTheme]="selectedTheme"
                         (deleteTheme)="onDeletetheme($event)"
-                          (updateTheme)="onUpdateTheme($event)"></app-subjects>
+                          (updateTheme)="onUpdateTheme($event)"
+                            (addTheme)="onAddTheme($event)" ></app-subjects>
   <div class="main-panel">
     <div class="content">
       <div class="container-fluid">
