--- a/src/app/views/themes/themes.component.html
+++ b/src/app/views/themes/themes.component.html
@@ -3,7 +3,7 @@
     <mat-toolbar>
       <span>Lessons</span>
       <span>
-        <button mat-icon-button>
+        <button mat-icon-button (click)="openAddDialog()">
           <mat-icon>add</mat-icon>
         </button>
     </span>
