--- a/src/app/views/themes/themes.component.html
+++ b/src/app/views/themes/themes.component.html
@@ -8,18 +8,20 @@
         </button>
     </span>
     </mat-toolbar>
-
   </div>
+
+
+
+  <div class="line"></div>
+
   <div class="sidebar-wrapper">
     <ul class="nav">
-
       <li class="nav-item category"
           [class.active]="selectedTheme"
             (click)="getChaptersByTheme(null)">
         <a class="nav-link pointer">
             <span class="all-category-title">Alle vakken</span>
         </a>
-
       </li>
 
       <li class="nav-item pointer"
