delete/finish button invisible on create theme

--- a/src/app/dialog/edit-theme-dialog/edit-theme-dialog.component.html
+++ b/src/app/dialog/edit-theme-dialog/edit-theme-dialog.component.html
@@ -32,7 +32,9 @@
   </div>
 
   <div class="col-12 text-center">
-    <button mat-button class="red"
+    <button
+      *ngIf="canDelete()"
+          mat-button class="red"
             (click)="delete()"
              >
       Delete
