delete problem fix

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <app-subjects  (selectTheme) = "onSelectTheme($event)"
                     [themes]="themes"
                       [selectedTheme]="selectedTheme"
-                        (deleteTheme)="onDeletetheme($event)"
+                        (deleteTheme)="onDeleteTheme($event)"
                           (updateTheme)="onUpdateTheme($event)"
                             (addTheme)="onAddTheme($event)" >
   </app-subjects>
